<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/calculation"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="50dp"
        android:paddingBottom="50dp"
        android:textAlignment="center"
        android:textSize="25sp"
        android:layout_marginBottom="1dp"
        android:background="@color/calculation"
        android:text="@string/defaultText"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:textSize="18sp"
        android:gravity="center"
        android:background="@color/numButton"
        android:layout_margin="2dp"
        android:id="@+id/one"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="buildNumber"
        android:text="@string/one"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@id/four"
        app:layout_constraintTop_toBottomOf="@id/calculation"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/two" />

    <TextView
        android:textSize="18sp"
        android:gravity="center"
        android:background="@color/numButton"
        android:layout_margin="2dp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/two"
        android:onClick="buildNumber"
        android:id="@+id/two"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/calculation"
        app:layout_constraintBottom_toTopOf="@id/five"
        app:layout_constraintLeft_toRightOf="@id/one"
        app:layout_constraintRight_toLeftOf="@id/three" />

    <TextView
        android:textSize="18sp"
        android:gravity="center"
        android:background="@color/numButton"
        android:layout_margin="2dp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/three"
        android:onClick="buildNumber"
        android:id="@+id/three"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/calculation"
        app:layout_constraintBottom_toTopOf="@id/six"
        app:layout_constraintLeft_toRightOf="@id/two"
        app:layout_constraintRight_toLeftOf="@id/clear" />

    <TextView
        android:textSize="18sp"
        android:gravity="center"
        android:background="@color/funcButton"
        android:layout_margin="2dp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/clear"
        android:onClick="clear"
        android:id="@+id/clear"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/calculation"
        app:layout_constraintBottom_toTopOf="@id/plus"
        app:layout_constraintLeft_toRightOf="@id/three"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:textSize="18sp"
        android:gravity="center"
        android:background="@color/numButton"
        android:layout_margin="2dp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/four"
        android:onClick="buildNumber"
        android:id="@+id/four"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/one"
        app:layout_constraintBottom_toTopOf="@id/seven"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/five" />

    <TextView
        android:textSize="18sp"
        android:gravity="center"
        android:background="@color/numButton"
        android:layout_margin="2dp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/five"
        android:onClick="buildNumber"
        android:id="@+id/five"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/two"
        app:layout_constraintBottom_toTopOf="@id/eight"
        app:layout_constraintLeft_toRightOf="@id/four"
        app:layout_constraintRight_toLeftOf="@id/six" />

    <TextView
        android:textSize="18sp"
        android:gravity="center"
        android:background="@color/numButton"
        android:layout_margin="2dp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/six"
        android:onClick="buildNumber"
        android:id="@+id/six"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/three"
        app:layout_constraintBottom_toTopOf="@id/nine"
        app:layout_constraintLeft_toRightOf="@id/five"
        app:layout_constraintRight_toLeftOf="@id/plus" />

    <TextView
        android:textSize="18sp"
        android:gravity="center"
        android:background="@color/funcButton"
        android:layout_margin="2dp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/plus"
        android:onClick="setCalcMode"
        android:id="@+id/plus"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/clear"
        app:layout_constraintBottom_toTopOf="@id/minus"
        app:layout_constraintLeft_toRightOf="@id/six"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:textSize="18sp"
        android:gravity="center"
        android:background="@color/numButton"
        android:layout_margin="2dp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/seven"
        android:onClick="buildNumber"
        android:id="@+id/seven"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/four"
        app:layout_constraintBottom_toTopOf="@id/dot"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/eight" />

    <TextView
        android:textSize="18sp"
        android:gravity="center"
        android:background="@color/numButton"
        android:layout_margin="2dp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/eight"
        android:onClick="buildNumber"
        android:id="@+id/eight"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/five"
        app:layout_constraintBottom_toTopOf="@id/zero"
        app:layout_constraintLeft_toRightOf="@id/seven"
        app:layout_constraintRight_toLeftOf="@id/nine" />

    <TextView
        android:textSize="18sp"
        android:gravity="center"
        android:background="@color/numButton"
        android:layout_margin="2dp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/nine"
        android:onClick="buildNumber"
        android:id="@+id/nine"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/six"
        app:layout_constraintBottom_toTopOf="@id/multiply"
        app:layout_constraintLeft_toRightOf="@id/eight"
        app:layout_constraintRight_toLeftOf="@id/minus" />

    <TextView
        android:textSize="18sp"
        android:gravity="center"
        android:background="@color/funcButton"
        android:layout_margin="2dp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/minus"
        android:onClick="setCalcMode"
        android:id="@+id/minus"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/plus"
        app:layout_constraintBottom_toTopOf="@id/divide"
        app:layout_constraintLeft_toRightOf="@id/nine"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:textSize="18sp"
        android:gravity="center"
        android:background="@color/numButton"
        android:layout_margin="2dp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/dot"
        android:onClick="buildNumber"
        android:id="@+id/dot"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/seven"
        app:layout_constraintBottom_toTopOf="@id/calculate"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/zero" />

    <TextView
        android:textSize="18sp"
        android:gravity="center"
        android:background="@color/numButton"
        android:layout_margin="2dp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/zero"
        android:onClick="buildNumber"
        android:id="@+id/zero"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/eight"
        app:layout_constraintBottom_toTopOf="@id/calculate"
        app:layout_constraintLeft_toRightOf="@id/dot"
        app:layout_constraintRight_toLeftOf="@id/multiply" />

    <TextView
        android:textSize="18sp"
        android:gravity="center"
        android:background="@color/funcButton"
        android:layout_margin="2dp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/multiply"
        android:onClick="setCalcMode"
        android:id="@+id/multiply"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/nine"
        app:layout_constraintBottom_toTopOf="@id/calculate"
        app:layout_constraintLeft_toRightOf="@id/zero"
        app:layout_constraintRight_toLeftOf="@id/divide" />

    <TextView
        android:textSize="18sp"
        android:gravity="center"
        android:background="@color/funcButton"
        android:layout_margin="2dp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/divide"
        android:onClick="setCalcMode"
        android:id="@+id/divide"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/minus"
        app:layout_constraintBottom_toTopOf="@id/calculate"
        app:layout_constraintLeft_toRightOf="@id/multiply"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="20sp"
        android:gravity="center"
        android:padding="30dp"
        android:background="@color/calculation"
        android:text="@string/calculate"
        android:id="@+id/calculate"
        android:onClick="equals"
        app:layout_constraintTop_toBottomOf="@id/zero"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</android.support.constraint.ConstraintLayout>